--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
   port: 19999
-  context-path: /hiringplatform
+  context-path: /recruitassemble
 spring:
   thymeleaf:
     mode: LEGACYHTML5
@@ -21,3 +21,7 @@ json:
 version:
   pcversion: "V1.0" # 大版本号
   build: 0010 # 小版本号
+caffine:
+  duration: 50
+
+
