--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -19,3 +19,12 @@ logback:
 redis:
   addr: redis://127.0.0.1:6379
   password: Cloud@002
+
+msg:
+  accountSid: 8a216da855826478015599e3f66e1411
+  authToken: 71a6619327734d81957e60f2eeaa2626
+  appId: 8a216da86c8a1a54016c8dc74f1c0182
+  serberRip: app.cloopen.com
+  serverPort: 8883
+  msgModelId: 492507
+
